tests/baselines/reference/intlNumberFormatES5UseGrouping(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
intlNumberFormatES5UseGrouping.ts(2,34): error TS2322: Type 'string' is not assignable to type 'boolean | undefined'.
intlNumberFormatES5UseGrouping.ts(3,34): error TS2322: Type 'string' is not assignable to type 'boolean | undefined'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== intlNumberFormatES5UseGrouping.ts (2 errors) ====
    new Intl.NumberFormat('en-GB', { useGrouping: true });
    new Intl.NumberFormat('en-GB', { useGrouping: 'true' }); // expect error
                                     ~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'boolean | undefined'.
    new Intl.NumberFormat('en-GB', { useGrouping: 'always' }); // expect error
                                     ~~~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'boolean | undefined'.
    
    const { useGrouping } = new Intl.NumberFormat('en-GB').resolvedOptions();
    